# rpcx-hello-world

./: Cargo.toml  README.md
program/: Cargo.toml
program/src/: lib.rs
rpcx-package/: Cargo.toml
rpcx-package/src/: lib.rs
script/: Cargo.toml
script/src/: main.rs
