[workspace]

members = [
    "program",
    "script",
    "rpcx-package",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
atlas-rpcx-bindings = "0.0.1"
borsh = "0.10.4"
solana-client = "1.18.26"
solana-program = "1.18.26"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "0382b672560493840f453f2a0e24c4a129abd3a4"
