[workspace]
resolver = "2"
members = ["program", "script"]

exclude = ["rpcx-package"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
borsh = "1.5.5"
clap = { version = "4.5.28", features = ["derive", "env"] }
solana-cli-config = "=2.0.24"
solana-client = "=2.0.24"
solana-program = "=2.0.24"
solana-program-test = "=2.0.24"
solana-sdk = "=2.0.24"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "0382b672560493840f453f2a0e24c4a129abd3a4"
